!203 fix(#I1K8MI): 修复 Layout 组件内置菜单样式问题 * doc: 属性排序 * refactor: 增加出错页面提示信息 z-index * doc: 增加 layout 组件属性说明 * refactor: 菜单收起示例增加显示页脚功能 * fix: 更新 Layout 适配后 Menu 示例侧边栏丢失问题

--- a/src/BootstrapBlazor.Shared/wwwroot/css/site.css
+++ b/src/BootstrapBlazor.Shared/wwwroot/css/site.css
@@ -370,7 +370,7 @@ section {
     padding: 0.6rem 1.25rem 0.7rem 1.25rem;
     position: fixed;
     width: 100%;
-    z-index: 1000;
+    z-index: 1080;
 }
 
     #blazor-error-ui .dismiss {
@@ -934,3 +934,7 @@ section {
     .page-layout-demo-option .tabs-body-content {
         margin: 0 -1rem -2rem -1rem;
     }
+
+#components-reconnect-modal {
+    z-index: 1080 !important;
+}
