--- a/src/BootstrapBlazor/wwwroot/css/bootstrap.blazor.css
+++ b/src/BootstrapBlazor/wwwroot/css/bootstrap.blazor.css
@@ -3318,7 +3318,7 @@ a {
     position: relative;
 }
 
-.layout-side {
+.layout.is-page .layout-side {
     transform: translateX(-100%);
     position: fixed;
     top: 0;
@@ -3330,7 +3330,7 @@ a {
     z-index: 1030;
 }
 
-    .layout-side.is-collapsed {
+    .layout.is-page .layout-side.is-collapsed {
         transform: translateX(0);
     }
 
@@ -3548,8 +3548,9 @@ a {
             height: auto;
         }
 
+    .layout .layout-side,
     .layout.is-page .layout-side,
-    .layout.is-page .layout-menu .menu.is-vertical {
+    .layout .menu.is-vertical {
         transition: width .3s linear;
     }
 
@@ -3599,8 +3600,12 @@ a {
         height: calc(100vh - 155px);
     }
 
-    .layout.is-page .layout-main.is-collapsed, .layout.is-page .layout-footer.is-collapsed {
+    .layout.is-page .layout-main.is-collapsed {
         display: block;
+    }
+
+    .layout.is-page .layout-footer.is-collapsed {
+        display: flex;
     }
 
     .layout.is-page .layout-menu .menu.is-vertical .nav-link:before {
